--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,9 @@
         <div id="game-board">
             <div id="score-board">
                 <div id="flag-count">010</div>
-                <button class="pressed" id="game-state" >smiiley</button>
+                <button class="pressed" id="game-state" >
+                    <img width="26" height="26" src="assests/running.png" alt="happy"/>
+                </button>
                 <div id="time">000</div>
             </div>
             <div id="board">
@@ -33,5 +35,7 @@
 
         </div>
     </div>
+
+    <script src="script2.js"></script>
 </body>
 </html>
