--- a/index2.html
+++ b/index2.html
@@ -19,13 +19,13 @@
         </div>
         <div id="game-bar">
             <span>Game</span>
-            <span>Help</span>
+            <a href="https://minesweepergame.com/strategy/how-to-play-minesweeper.php" target="_blank" id="Help" >Help</a>
         </div>
         <div id="game-board">
             <div id="score-board">
                 <div id="flag-count">010</div>
                 <button class="pressed" id="game-state" >
-                    <img width="26" height="26" src="assests/running.png" alt="happy"/>
+                    <img width="20" height="20" src="assests/running.png" alt="happy"/>
                 </button>
                 <div id="time">000</div>
             </div>
@@ -36,6 +36,6 @@
         </div>
     </div>
 
-    <script src="script3.js"></script>
+    <script src="script4.js"></script>
 </body>
 </html>
